# wasm_snake

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
src/: index.html  index.js
src/wasm/snake/: Cargo.toml
src/wasm/snake/src/: lib.rs
